--- a/1 Creating My First C# Program/1 Creating My First C# Program.csproj
+++ b/1 Creating My First C# Program/1 Creating My First C# Program.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>C_</RootNamespace>
+    <RootNamespace>_1_Creating_My_First_C__Program</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
